ritual 12/09 e ritual de mulheres 24/09

--- a/index.html
+++ b/index.html
@@ -118,50 +118,55 @@
 					</div>
 				</div>
 				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/09/03">
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/09/12">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Sábado - 03 de Setembro - a partir das 21h00</h3>
-						<img width="100%" src="img/rituais/ayahuasca-20160903.jpeg">
+						<h3 style="text-align:center">Segunda - 12 de Setembro - a partir das 20h30</h3>
+						<img width="100%" src="img/rituais/ayahuasca-20160912.jpeg">
 						<div class="intro-lead-in">
 							<p><h3>Ayahuasca e Meditação</h3></p>
-							<p>Com Amor,</p>
-							<p>Convidamos a todos a mais um maravilho Ritual de Curas e Bençãos com a Sagrada Ayahuasca, Sábado 30/07/2016 às 21:00 horas pontualmente, conforme convite em anexo.</p>
-							<p>Os portões estarão abertos a partir das 19:00 horas e fechados às 20:45 horas.</p>
-							<p>No site maiores informações sobre as normas, horários de carona e vestimenta adequada de homens e mulheres para um Ritual Espiritual.</p>
-							<p>Na Serra a temperatura cai bastante, pedimos que levem agasalho, colchonete e cobertor.</p>
-							<p>No final do Ritual é de costume fazermos uma Confraternização, sintam em seu coração e tragam frutas, suco ou alimento de seu agrado.</p>
-							<p>Nossa casa precisa de velas, incensos e papel higiênico pedimos sua colaboração.</p>
-							<p><b>Aviso Importante:</b></p>
-							<p>A Instituição Fraternidade CCA, cuida de 150 crianças carentes, além de muitas famílias que vivem ao redor numa situação de extrema pobreza, como exemplo : vivendo com esgoto aberto, sem alimentos, roupas, com frio e quem sabe até mesmo sem esperança.</p>
-							<p>Esperamos neste momento tocar o seu coração e pedir que doem um agasalho, uma cesta básica, 1 litro de leite, Aquela mantinha velha que seja, mas que fará a diferença para aquele que não tem nada.</p>
-							<p>Com toda nossa gratidão.</p>
-							<p><b>Terreno:</b></p>
-							<p>Rua Dom Pedro de Alcântara, 430</p>
-							<p>Mairiporã - São Paulo - Antiga Rua 01</p>
-							<p>Sempre Gratos,</p>
-							<p>Céu Luz e Caridade  e Céu Viva Vida</p>
 						</div>
 					</div>
 				</div>
+				
 				<p>&nbsp;</p>
-				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center" data="2016/08/17">
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/09/24">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Quarta - 17 de Agosto - das 20h30 até 22h30</h3>
-						<img width="100%" src="img/rituais/sagrado_feminino_20160817.jpeg">
-					</div>
-				</div>
-				<p>&nbsp;</p>
-				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center" data="2016/06/25">
-					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Sábado - 25 de Junho - às 16h</h3>
-						<p>Arraiá no Terreno - Festa Junina</p>
-						<p>Convidamô a todos,  a participá do nosso Arraiá !! </p>
-						<p>Nóis vai começa às 16:00 horas, vai tê fogueira e precisa chegá a caráter, vai tê cadeia, bingo, quadrilha e inté correio elegante, vai tê também quentão de gengibre e todos tem que participá !!!</p>
-						<p>Num esquece de jeito nenhum de levá o pratinho de doce ou salgado, precisa de descartáveis copo, prato, colher e galfo (ahhh) num esquece do gualdanapo e de seu refrigerante.</p>
-						<p>Contamô com ocê lá !!!</p>
-						<img width="100%" src="img/rituais/festa-junina-2016.jpeg">
+						<h3 style="text-align:center">Sábado - 24 de Setembro - a partir das 21h00</h3>
+						<img width="100%" src="img/rituais/ritualdemulheres-20160924.jpeg">
+						<div class="intro-lead-in">
+							<p><h3>Ritual Só para Mulheres</h3></p>
+							<p>Convidamos a todas para um maravilhoso Ritual de Mulheres com a Sagrada Ayahuasca em Celebração do Equinócio de Primavera - Sábado 24/09/2016 às 21:00 horas pontualmente, conforme convite em anexo.</p>
+							<p>Solicitamos que venham de branco e tragam flores de sua preferência para enfeitar ainda mais nossa celebração.</p>
+							<p>Os portões estarão abertos a partir das 15:00 horas, pois nossa querida Naguissa já estará com o Tarô aberto e os portões estarão fechados às 20:45 horas.</p>
+							<p>Tragam frutas, sucos ou alimento de seu agrado para Confraternização no Final do Ritual.</p>
+							<p>Na Serra a temperatura cai bastante, pedimos que não se esqueçam do agasalho, colchonete e cobertor.</p>
+							<p>No site maiores informações sobre as normas, horários de carona e vestimenta adequada de homens e mulheres para um Ritual Espiritual.</p>
+							<p>www.clcecvv.com.br</p>
+							<p><h3>PRIMAVERA CICLO DE PROSPERIDADE</h3></p>
+							<p><h4>Estação e época de crescimento e recomeço.</h4></p>
+							<p>O fluxo das estações e as fases da Lua afetam a vida no campo, o nosso ânimo e as mudanças no tempo. Na verdade, os quatro ciclos das estações indicam pontos de mudança da energia da natureza dentro de nós mesmos. Porém, nas grandes cidades, o movimento da força sutil não é percebido com tanta consciência.</p>
+							<p>A Primavera - que tem início no dia (22) - é o começo de um novo ciclo, que representa o "nascimento".</p>
+							<p>É o período de regar nossos jardins e plantar sementes para o nosso processo de renascimento.</p>
+							<p>Durante o equinócio de Primavera - quando a força do dia e da noite tornam-se iguais - devemos nos integrar conscientemente à "Mãe Terra" que todo ano renova seu ciclo de nascimento e ressurreição, muito favorável a novos inícios.</p>
+							<p>Os festivais solares e as estações do ano</p>
+							<p>Nas antigas tradições de povos ancestrais, as transformações que ocorriam na natureza eram celebradas através dos Festivais Solares. Esses eventos aconteciam em datas fixas, marcando os pontos chamados de solstícios e os equinócios. Nessa época, existia uma preocupação da relação da terra com o sol.</p>
+							<p>Equinócio é uma palavra que deriva do latim (aequinoctium) e significa "noite igual", e refere-se ao momento do ano em que a duração do dia é igual à noite, em toda a Terra. Os equinócios ocorrem nos meses de março e setembro, definindo as mudanças de estação. Em março, o equinócio marca o início da primavera no hemisfério norte e do outono no hemisfério sul. Em setembro ocorre o inverso: o equinócio marca o início do outono no hemisfério norte e da primavera no hemisfério sul.</p>
+							<p>Na astronomia, solstício (do latim sol + sistere, que não se mexe) é o momento em que o Sol, durante seu movimento aparente na esfera celeste, atinge a maior declinação em latitude, medida a partir da linha do equador. Os solstícios ocorrem duas vezes por ano: em dezembro e junho. O dia e hora exatos variam de um ano para outro. Quando ocorre no verão, significa que a duração do dia é a mais longa do ano. Quando ocorre no inverno, significa que a duração da noite é a mais longa do ano.</p>
+							<p>Na primavera, a primeira manifestação de energia vital é o nascer e brotar da vegetação. Trata-se de um momento de prosperidade e crescimento. É uma estação excelente para trabalhar a comunicação, a abundância e a fertilidade em nosso caminhar individual.</p>
+							<p>No Xamanismo celebramos a "Mãe Terra", honrando os espíritos da natureza e abençoando as sementes. As crianças representam as sementes do futuro e estão muito presentes com sua alegria e disposição dentro deste processo.</p>
+							<p>De acordo com antigas tribos indígenas, a primavera é a estação do despertar. É quando enxergamos através da ilusão, ou quando descobrimos novas informações, trazendo clareza para o caos ou confusão. Desse modo, recomeçamos rompendo velhos padrões, renovamos nossa intenção, propósitos e nos preparamos para um novo ciclo, que traz o equilíbrio entre o masculino e o feminino em nossas energias.</p>
+							<p>Nesta estação, saímos da introspecção do inverno e passamos a florescer e a despertar em nossas vidas.</p>
+							<p>É a chegada da energia que nos faz abrir novas fontes de criatividade, nos tornar mais otimistas, observadores e determinados. Nossos antepassados respeitavam os momentos de Equinócios e Solstícios, pois sabiam que estes ciclos são importantes para a vitalidade de todos os seres que habitam a Terra.</p>
+							<p>Primavera inspira busca de significado para a vida</p>
+							<p>A primavera, como momento de florescimento, recomeço, clareza e iluminação, nos inspira a buscar um significado para a vida. Buscar luz e força interior, bem como fluidez para o caminho. Damos um salto na primavera. Cada dia é como uma nova oportunidade de produzir sementes.</p>
+							<p>O índio foi além desse conceito, crendo que as sementes que agora plantamos são para a próxima vida. As sementes da próxima vida estão sendo preparadas na vida presente que estamos vivendo. Não há como escapar da consequência de nossas ações. Cedo ou tarde o passado reaparece para nós.</p>
+							<p>Sendo assim, na primavera somos convidados para examinarmos nosso modo pessoal de ser, e nos decidirmos qual sistema de crenças que nos serve. Aprendemos o poder de tomar decisões e de usar o livre arbítrio.</p>
+							<p>Que tal rever algumas atitudes?</p>
+							<p>A energia da primavera nos impulsiona a procurar a verdade da vida e nos libertar de ilusões que dificultam nosso renascimento, além de trazer claridade para trabalhar questões materiais. O poder desta estação é o despertar da espontaneidade, da admiração e da verdade.</p>
+							<p>Mas, para nascer o novo, examinamos nosso jeito de ser e aquilo que aprendemos na vida. Analisamos acima dos nossos preconceitos aquilo que nos serve e aquilo que queremos deixar cair. Fazer caridade, trabalhar de forma voluntária, plantar árvores e viver de forma ecológica e sustentável, por exemplo, nos harmoniza com um propósito espiritual, além da nossa própria compreensão. Comer de forma sustentável gerando mais saúde, menos sofrimento animal e menos destruição de florestas são fatores para a reflexão da luz que chega com a primavera.</p>
+							<p>É o momento de aprender a olhar nossos desafios como oportunidades de crescimento pessoal, ampliando nossa força interior e nossa fé. Neste momento em que a força de vida, a Terra e a natureza aparecem tão intensamente, ficamos motivados para fazer nossa vida se mover, depois das limitações e do recolhimento do inverno.</p>
+							<p>Esperamos você !!</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -261,7 +266,7 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>03 de Setembro - Sábado</h4>
+									<h4>12 de Setembro - Segunda-feira</h4>
 									<h4 class="subheading">Vivência Xamânica</h4>
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
