--- a/index.html
+++ b/index.html
@@ -117,16 +117,6 @@
 						<h2>Próximos Rituais</h2>
 					</div>
 				</div>
-				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/09/12">
-					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Segunda - 12 de Setembro - a partir das 20h30</h3>
-						<img width="100%" src="img/rituais/ayahuasca-20160912.jpeg">
-						<div class="intro-lead-in">
-							<p><h3>Ayahuasca e Meditação</h3></p>
-						</div>
-					</div>
-				</div>
 				
 				<p>&nbsp;</p>
 				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/09/24">
@@ -166,6 +156,81 @@
 							<p>Mas, para nascer o novo, examinamos nosso jeito de ser e aquilo que aprendemos na vida. Analisamos acima dos nossos preconceitos aquilo que nos serve e aquilo que queremos deixar cair. Fazer caridade, trabalhar de forma voluntária, plantar árvores e viver de forma ecológica e sustentável, por exemplo, nos harmoniza com um propósito espiritual, além da nossa própria compreensão. Comer de forma sustentável gerando mais saúde, menos sofrimento animal e menos destruição de florestas são fatores para a reflexão da luz que chega com a primavera.</p>
 							<p>É o momento de aprender a olhar nossos desafios como oportunidades de crescimento pessoal, ampliando nossa força interior e nossa fé. Neste momento em que a força de vida, a Terra e a natureza aparecem tão intensamente, ficamos motivados para fazer nossa vida se mover, depois das limitações e do recolhimento do inverno.</p>
 							<p>Esperamos você !!</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+				
+				<p>&nbsp;</p>
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/10/08">
+					<div style="width:100%; max-width: 700px; margin: 0 auto">
+						<h3 style="text-align:center">Sábado - 10 de Outubro - a partir das 14h00</h3>
+						<img width="100%" src="img/rituais/pajelanca-20161008.jpg">
+						<div class="intro-lead-in">
+							<p><h3>Pajelança</h3></p>
+							<p>O Céu Viva Vida e Luz e Caridade, estará apoiando e realizando a Pajelança junto com o Povo Huni Kui da Aldeia Boa Sorte, em 08/10/2016 às 22:30 Horas (Sábado) na Serra da Cantareira.</p>
+
+							<p>A Tribo não costuma cobrar por nenhum dos trabalhos nem por nenhuma medicina, mas a Energia de Troca (abaixo) dessas atividades que serão realizadas, ajudarão a pagar os custos da  vinda dos Txais e viabilizar o projeto para implementação do Poço Artesiano para segurança alimentar da Tribo que é R$50.000,00 (Cinquenta Mil Reais).</p>
+
+							<p>Visando a transparência máxima, a relação de custos e trabalhos pode ser encontrada em <a href="https://mm.tt/747074864?t=IfjsLUOOlM" target="blank">https://mm.tt/747074864?t=IfjsLUOOlM</a></p>
+
+							<p>Abertura dos Portões :  Sábado às 13horas</p>
+							<p>14h as 15h – Reunião Geral e Objetivo do Trabalho</p>
+							<p>15h as 16h – Histórias do Povo Huni Kui</p>
+							<p>16h as 17h – Roda de Rapé e Exposição de artesanatos, CD e medicinas para venda</p>
+							<p>17h as 21h30 – Concentração</p>
+							<p>22h até o dia amanhecer – Cerimônia com o Nixipae</p>
+
+							<p>Medicinas a serem consagradas nas cerimônias:</p>
+							<p>- Nixipae (Ayahuasca)</p>
+							<p>- Dume Deshke (Rapé)</p>
+							<p>- Shane Tsamati (Sananga)</p>
+							<p>- Defumação com ervas de limpeza espiritual</p>
+
+							<p>Domingo às 09h:</p>
+							<p>- Kampum (Cerimônia a parte)</p>
+							<p>Para fazer basta chegar em jejum até as 8h e tomar bastante água, deixe para tomar no espaço.</p>
+							<p>ENERGIAS DE TROCA:</p>
+
+							<p>Huni Kui - Cerimônia com Nixipae |Ayahuasca|, Dume Deshke |Rapé| e Shane Tsamati |Sananga| - R$150,00</p>
+
+							<p>Huni Kui - Cerimônia com Nixipae |Ayahuasca|, Dume Deshke |Rapé|, Shane Tsamati |Sananga| e Kampum - R$235,00</p>
+
+							<p>Huni Kui - Cerimônia com Nixipae, Dume Deshke, Shane Tsamati, Kampum e Pajelânça Individual de Cura -- R$455,00</p>
+
+							<p>Huni Kui - Cerimönia do Kampum - R$125,00</p>
+
+							<p>Para participar é preciso estar com RG, ser maior de idade (caso não seja precisa estar com os pais / responsável(s), ou com autorização por escrito, assinada e autenticada!</p>
+							<p>e estar de pleno acordo com as *NORMAS E CONDUTAS*.</p>
+							<p>E pedimos a gentileza que *CONFIRMEM A PRESENÇA* para prepararmos o espaço!</p>
+							<p>Pedimos que o irmãos tragam alimento para Confraternização Final , Sucos e Frutas ou seja alimentos leves e de seu agrado.</p>
+							<p>Pedimos também que tragam :</p>
+							<p>Um pacote de papel higiênico (04 rolos)</p>
+							<p>01 Maço de Velas .</p>
+
+							<p>Mais Informações:</p>
+							<p>Carlos 9 8793-0810</p>
+							<p>Luis 9 4013-6304</p>
+							<p>Sandra 9 9641-0044</p>
+							<p>Márcia 9 8338-2840</p>
+
+							<p>AS VAGAS SÃO LIMITADAS E SE FAZ NECESSÁRIO A CONFIRMAÇÃO ANTECIPADA.</p>
+
+							<p>Conta para Depósito</p>
+							<p>Carlos Alexandre Ferreira Silva</p>
+							<p>CPF : 115.120.608-36</p>
+							<p>Banco Itaú</p>
+							<p>Agência : 4099</p>
+							<p>Conta Corrente : 47170-0</p>
+
+							<p>Comprovantes enviem via whats-up : 9 8793-0810 Carlos</p>
+
+
+							<p>“O Deus que habita em mim, saúda o Deus que habita em você. Honro a luz, o amor, a verdade, a beleza, e a paz dentro de você. Minha alma honra a sua alma. Ao dividir todas essas coisas, somos unidos, somos os mesmos, somos UM”.</p>
+
+							<p>Sejam Bem-vindos,  !!</p>
 						</div>
 					</div>
 				</div>
