--- a/index.html
+++ b/index.html
@@ -160,13 +160,10 @@
 					</div>
 				</div>
 			</div>
-
-
-				
 				<p>&nbsp;</p>
 				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/10/08">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Sábado - 10 de Outubro - a partir das 13h00</h3>
+						<h3 style="text-align:center">Sábado - 08 de Outubro - a partir das 13h00</h3>
 						<img width="100%" alt="Ritual Pajelança" title="Ritual Pajelança" src="img/rituais/pajelanca-20161008.jpg">
 						<div class="intro-lead-in">
 							<p><h3>Pajelança</h3></p>
@@ -231,6 +228,38 @@
 							<p>“O Deus que habita em mim, saúda o Deus que habita em você. Honro a luz, o amor, a verdade, a beleza, e a paz dentro de você. Minha alma honra a sua alma. Ao dividir todas essas coisas, somos unidos, somos os mesmos, somos UM”.</p>
 
 							<p>Sejam Bem-vindos,  !!</p>
+						</div>
+					</div>
+				</div>
+
+
+				<p>&nbsp;</p>
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/10/10">
+					<div style="width:100%; max-width: 700px; margin: 0 auto">
+						<h3 style="text-align:center">Segunda-Feira - 10 de Outubro - a partir das 20h30</h3>
+						<img width="100%" alt="Ritual Ayahuasca" title="Ritual Ayahuasca" src="img/rituais/ayahuasca-20161010.jpg">
+						<div class="intro-lead-in">
+							<p><h3>RITUAL DE CURAS E BENÇÃOS</h3></p>
+							<p>Convidamos a todos a mais um "Ritual de Curas e Bençãos", nesta próxima segunda-feira 10/10/2016 às 20:30 horas pontualmente, conforme convite em anexo.</p>
+							<p>Ayahuasca – Rapé – Ervas de Defumação e Fogueira !!</p>
+							<p>Os portões estarão abertos a partir das 19:30hs e fechados às 20:15 hs.</p>
+							<p>No site maiores informações sobre as normas, horários de carona e vestimenta adequada de homens e mulheres para um Ritual Espiritual.</p>
+							<p>Na Serra a temperatura cai bastante, pedimos que levem agasalho, colchonete e cobertor .</p>
+							<p>Tragam frutas, sucos ou alimento de seu agrado para Confraternização no final do Ritual, mas no final desta Confraternização será servida uma Maravilhosa Sopa !!</p>
+							<p>Nossa casa precisa de velas, incensos e papel higiênico pedimos sua colaboração.</p>
+
+							<p>Sua mão estendida, faz o outro entender que há esperança para dor .   </p>
+							<img width="100%" alt="Ritual Pajelança" title="Ritual Pajelança" src="img/rituais/sua-mao-estendida.jpg">
+							<p>Estamos direcionando todo o valor do Ritual de 10/10 segunda-feira para Instituição CCA Fraternidade, portanto se você não puder comparecer e desejar nos ajudar entre em contato até 10/10 via whats-up com Márcia (011)98338-2840, estaremos direcionando local de entrega e depósito.</p>
+							<p>A Instituição Núcleo Asssistencial Fraternidade esta situada na Rua General Jerônimo Furtado, 286 – Jaçanã – São Paulo – Cep : 02237-000 Fone : 2241-7841 e cuida de 150 crianças carentes, além de muitas famílias que vivem ao redor numa situação de extrema pobreza, como exemplo : vivendo com esgoto aberto, sem alimentos e roupas, lidando com frio e quem sabe até mesmo sem esperança.</p>
+							<p>Esperamos neste momento tocar o seu coração e pedimos a você que nos ajude com livros de literatura, cestas básicas para as famílias, cobertores, roupas para as crianças, sapatos e panelas grandes para cozinha da instituição.</p>
+							<p>Segue endereço da Instituição</p>
+							<p>Com toda nossa gratidão.</p>
+							<p>Terreno</p>
+							<p>Rua Dom Pedro de Alcântara, 430 </p>
+							<p>Mairiporã - São Paulo - Antiga Rua 01</p>
+							<p>www.clcecvv.com.br </p>
+							<p></p>
 						</div>
 					</div>
 				</div>
