--- a/index.html
+++ b/index.html
@@ -119,154 +119,25 @@
 				</div>
 				
 				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/09/24">
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/10/22">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Sábado - 24 de Setembro - a partir das 21h00</h3>
-						<img width="100%" alt="Ritual só para mulheres" title="Ritual só para mulheres" src="img/rituais/ritualdemulheres-20160924.jpeg">
+						<h3 style="text-align:center">Sábado 22 de Outubro às 21:00 horas pontualmente</h3>
+						<img width="100%" alt="Ritual com a Sagrada Ayahuasca em Celebração da Umbanda" title="Ritual com a Sagrada Ayahuasca em Celebração da Umbanda" src="img/rituais/ayahuasca-20161022.jpg">
 						<div class="intro-lead-in">
-							<p><h3>Ritual Só para Mulheres</h3></p>
-							<p>Convidamos a todas para um maravilhoso Ritual de Mulheres com a Sagrada Ayahuasca em Celebração do Equinócio de Primavera - Sábado 24/09/2016 às 21:00 horas pontualmente, conforme convite em anexo.</p>
-							<p>Solicitamos que venham de branco e tragam flores de sua preferência para enfeitar ainda mais nossa celebração.</p>
-							<p>Os portões estarão abertos a partir das 15:00 horas, pois nossa querida Naguissa já estará com o Tarô aberto e os portões estarão fechados às 20:45 horas.</p>
-							<p>Tragam frutas, sucos ou alimento de seu agrado para Confraternização no Final do Ritual.</p>
-							<p>Na Serra a temperatura cai bastante, pedimos que não se esqueçam do agasalho, colchonete e cobertor.</p>
+							<p><h3>Ritual de Curas e Bençãos com a Sagrada Ayahuasca em “Celebração da Umbanda”</h3></p>
+							<p>Convidamos a todos a mais um maravilhoso Ritual de Curas e Bençãos com a Sagrada Ayahuasca em “Celebração da Umbanda”, Sábado 22/10/2016 às 21:00 horas pontualmente, conforme convite em anexo.</p>
+							<p>Os portões estarão abertos a partir das 20:00 horas e fechados às 20:45 horas.</p>
 							<p>No site maiores informações sobre as normas, horários de carona e vestimenta adequada de homens e mulheres para um Ritual Espiritual.</p>
-							<p>www.clcecvv.com.br</p>
-							<p><h3>PRIMAVERA CICLO DE PROSPERIDADE</h3></p>
-							<p><h4>Estação e época de crescimento e recomeço.</h4></p>
-							<p>O fluxo das estações e as fases da Lua afetam a vida no campo, o nosso ânimo e as mudanças no tempo. Na verdade, os quatro ciclos das estações indicam pontos de mudança da energia da natureza dentro de nós mesmos. Porém, nas grandes cidades, o movimento da força sutil não é percebido com tanta consciência.</p>
-							<p>A Primavera - que tem início no dia (22) - é o começo de um novo ciclo, que representa o "nascimento".</p>
-							<p>É o período de regar nossos jardins e plantar sementes para o nosso processo de renascimento.</p>
-							<p>Durante o equinócio de Primavera - quando a força do dia e da noite tornam-se iguais - devemos nos integrar conscientemente à "Mãe Terra" que todo ano renova seu ciclo de nascimento e ressurreição, muito favorável a novos inícios.</p>
-							<p>Os festivais solares e as estações do ano</p>
-							<p>Nas antigas tradições de povos ancestrais, as transformações que ocorriam na natureza eram celebradas através dos Festivais Solares. Esses eventos aconteciam em datas fixas, marcando os pontos chamados de solstícios e os equinócios. Nessa época, existia uma preocupação da relação da terra com o sol.</p>
-							<p>Equinócio é uma palavra que deriva do latim (aequinoctium) e significa "noite igual", e refere-se ao momento do ano em que a duração do dia é igual à noite, em toda a Terra. Os equinócios ocorrem nos meses de março e setembro, definindo as mudanças de estação. Em março, o equinócio marca o início da primavera no hemisfério norte e do outono no hemisfério sul. Em setembro ocorre o inverso: o equinócio marca o início do outono no hemisfério norte e da primavera no hemisfério sul.</p>
-							<p>Na astronomia, solstício (do latim sol + sistere, que não se mexe) é o momento em que o Sol, durante seu movimento aparente na esfera celeste, atinge a maior declinação em latitude, medida a partir da linha do equador. Os solstícios ocorrem duas vezes por ano: em dezembro e junho. O dia e hora exatos variam de um ano para outro. Quando ocorre no verão, significa que a duração do dia é a mais longa do ano. Quando ocorre no inverno, significa que a duração da noite é a mais longa do ano.</p>
-							<p>Na primavera, a primeira manifestação de energia vital é o nascer e brotar da vegetação. Trata-se de um momento de prosperidade e crescimento. É uma estação excelente para trabalhar a comunicação, a abundância e a fertilidade em nosso caminhar individual.</p>
-							<p>No Xamanismo celebramos a "Mãe Terra", honrando os espíritos da natureza e abençoando as sementes. As crianças representam as sementes do futuro e estão muito presentes com sua alegria e disposição dentro deste processo.</p>
-							<p>De acordo com antigas tribos indígenas, a primavera é a estação do despertar. É quando enxergamos através da ilusão, ou quando descobrimos novas informações, trazendo clareza para o caos ou confusão. Desse modo, recomeçamos rompendo velhos padrões, renovamos nossa intenção, propósitos e nos preparamos para um novo ciclo, que traz o equilíbrio entre o masculino e o feminino em nossas energias.</p>
-							<p>Nesta estação, saímos da introspecção do inverno e passamos a florescer e a despertar em nossas vidas.</p>
-							<p>É a chegada da energia que nos faz abrir novas fontes de criatividade, nos tornar mais otimistas, observadores e determinados. Nossos antepassados respeitavam os momentos de Equinócios e Solstícios, pois sabiam que estes ciclos são importantes para a vitalidade de todos os seres que habitam a Terra.</p>
-							<p>Primavera inspira busca de significado para a vida</p>
-							<p>A primavera, como momento de florescimento, recomeço, clareza e iluminação, nos inspira a buscar um significado para a vida. Buscar luz e força interior, bem como fluidez para o caminho. Damos um salto na primavera. Cada dia é como uma nova oportunidade de produzir sementes.</p>
-							<p>O índio foi além desse conceito, crendo que as sementes que agora plantamos são para a próxima vida. As sementes da próxima vida estão sendo preparadas na vida presente que estamos vivendo. Não há como escapar da consequência de nossas ações. Cedo ou tarde o passado reaparece para nós.</p>
-							<p>Sendo assim, na primavera somos convidados para examinarmos nosso modo pessoal de ser, e nos decidirmos qual sistema de crenças que nos serve. Aprendemos o poder de tomar decisões e de usar o livre arbítrio.</p>
-							<p>Que tal rever algumas atitudes?</p>
-							<p>A energia da primavera nos impulsiona a procurar a verdade da vida e nos libertar de ilusões que dificultam nosso renascimento, além de trazer claridade para trabalhar questões materiais. O poder desta estação é o despertar da espontaneidade, da admiração e da verdade.</p>
-							<p>Mas, para nascer o novo, examinamos nosso jeito de ser e aquilo que aprendemos na vida. Analisamos acima dos nossos preconceitos aquilo que nos serve e aquilo que queremos deixar cair. Fazer caridade, trabalhar de forma voluntária, plantar árvores e viver de forma ecológica e sustentável, por exemplo, nos harmoniza com um propósito espiritual, além da nossa própria compreensão. Comer de forma sustentável gerando mais saúde, menos sofrimento animal e menos destruição de florestas são fatores para a reflexão da luz que chega com a primavera.</p>
-							<p>É o momento de aprender a olhar nossos desafios como oportunidades de crescimento pessoal, ampliando nossa força interior e nossa fé. Neste momento em que a força de vida, a Terra e a natureza aparecem tão intensamente, ficamos motivados para fazer nossa vida se mover, depois das limitações e do recolhimento do inverno.</p>
-							<p>Esperamos você !!</p>
-						</div>
-					</div>
-				</div>
-			</div>
-				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/10/08">
-					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Sábado - 08 de Outubro - a partir das 13h00</h3>
-						<img width="100%" alt="Ritual Pajelança" title="Ritual Pajelança" src="img/rituais/pajelanca-20161008.jpg">
-						<div class="intro-lead-in">
-							<p><h3>Pajelança</h3></p>
-							<p>O Céu Viva Vida e Luz e Caridade, estará apoiando e realizando a Pajelança junto com o Povo Huni Kui da Aldeia Boa Sorte, em 08/10/2016 às 22:30 Horas (Sábado) na Serra da Cantareira.</p>
-
-							<p>A Tribo não costuma cobrar por nenhum dos trabalhos nem por nenhuma medicina, mas a Energia de Troca (abaixo) dessas atividades que serão realizadas, ajudarão a pagar os custos da  vinda dos Txais e viabilizar o projeto para implementação do Poço Artesiano para segurança alimentar da Tribo que é R$50.000,00 (Cinquenta Mil Reais).</p>
-
-							<p>Visando a transparência máxima, a relação de custos e trabalhos pode ser encontrada em <a href="https://mm.tt/747074864?t=IfjsLUOOlM" target="blank">https://mm.tt/747074864?t=IfjsLUOOlM</a></p>
-
-							<p>Abertura dos Portões :  Sábado às 13horas</p>
-							<p>14h as 15h – Reunião Geral e Objetivo do Trabalho</p>
-							<p>15h as 16h – Histórias do Povo Huni Kui</p>
-							<p>16h as 17h – Roda de Rapé e Exposição de artesanatos, CD e medicinas para venda</p>
-							<p>17h as 21h30 – Concentração</p>
-							<p>22h até o dia amanhecer – Cerimônia com o Nixipae</p>
-
-							<p>Medicinas a serem consagradas nas cerimônias:</p>
-							<p>- Nixipae (Ayahuasca)</p>
-							<p>- Dume Deshke (Rapé)</p>
-							<p>- Shane Tsamati (Sananga)</p>
-							<p>- Defumação com ervas de limpeza espiritual</p>
-
-							<p>Domingo às 09h:</p>
-							<p>- Kampum (Cerimônia a parte)</p>
-							<p>Para fazer basta chegar em jejum até as 8h e tomar bastante água, deixe para tomar no espaço.</p>
-							<p>ENERGIAS DE TROCA:</p>
-
-							<p>Huni Kui - Cerimônia com Nixipae |Ayahuasca|, Dume Deshke |Rapé| e Shane Tsamati |Sananga| - R$150,00</p>
-
-							<p>Huni Kui - Cerimônia com Nixipae |Ayahuasca|, Dume Deshke |Rapé|, Shane Tsamati |Sananga| e Kampum - R$235,00</p>
-
-							<p>Huni Kui - Cerimônia com Nixipae, Dume Deshke, Shane Tsamati, Kampum e Pajelânça Individual de Cura -- R$455,00</p>
-
-							<p>Huni Kui - Cerimönia do Kampum - R$125,00</p>
-
-							<p>Para participar é preciso estar com RG, ser maior de idade (caso não seja precisa estar com os pais / responsável(s), ou com autorização por escrito, assinada e autenticada!</p>
-							<p>e estar de pleno acordo com as *NORMAS E CONDUTAS*.</p>
-							<p>E pedimos a gentileza que *CONFIRMEM A PRESENÇA* para prepararmos o espaço!</p>
-							<p>Pedimos que o irmãos tragam alimento para Confraternização Final , Sucos e Frutas ou seja alimentos leves e de seu agrado.</p>
-							<p>Pedimos também que tragam :</p>
-							<p>Um pacote de papel higiênico (04 rolos)</p>
-							<p>01 Maço de Velas .</p>
-
-							<p>Mais Informações:</p>
-							<p>Carlos 9 8793-0810</p>
-							<p>Luis 9 4013-6304</p>
-							<p>Sandra 9 9641-0044</p>
-							<p>Márcia 9 8338-2840</p>
-
-							<p>AS VAGAS SÃO LIMITADAS E SE FAZ NECESSÁRIO A CONFIRMAÇÃO ANTECIPADA.</p>
-
-							<p>Conta para Depósito</p>
-							<p>Carlos Alexandre Ferreira Silva</p>
-							<p>CPF : 115.120.608-36</p>
-							<p>Banco Itaú</p>
-							<p>Agência : 4099</p>
-							<p>Conta Corrente : 47170-0</p>
-
-							<p>Comprovantes enviem via whats-up : 9 8793-0810 Carlos</p>
-
-
-							<p>“O Deus que habita em mim, saúda o Deus que habita em você. Honro a luz, o amor, a verdade, a beleza, e a paz dentro de você. Minha alma honra a sua alma. Ao dividir todas essas coisas, somos unidos, somos os mesmos, somos UM”.</p>
-
-							<p>Sejam Bem-vindos,  !!</p>
-						</div>
-					</div>
-				</div>
-
-
-				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/10/10">
-					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Segunda-Feira - 10 de Outubro - a partir das 20h30</h3>
-						<img width="100%" alt="Ritual Ayahuasca" title="Ritual Ayahuasca" src="img/rituais/ayahuasca-20161010.jpg">
-						<div class="intro-lead-in">
-							<p><h3>RITUAL DE CURAS E BENÇÃOS</h3></p>
-							<p>Convidamos a todos a mais um "Ritual de Curas e Bençãos", nesta próxima segunda-feira 10/10/2016 às 20:30 horas pontualmente, conforme convite em anexo.</p>
-							<p>Ayahuasca – Rapé – Ervas de Defumação e Fogueira !!</p>
-							<p>Os portões estarão abertos a partir das 19:30hs e fechados às 20:15 hs.</p>
-							<p>No site maiores informações sobre as normas, horários de carona e vestimenta adequada de homens e mulheres para um Ritual Espiritual.</p>
-							<p>Na Serra a temperatura cai bastante, pedimos que levem agasalho, colchonete e cobertor .</p>
-							<p>Tragam frutas, sucos ou alimento de seu agrado para Confraternização no final do Ritual, mas no final desta Confraternização será servida uma Maravilhosa Sopa !!</p>
-							<p>Nossa casa precisa de velas, incensos e papel higiênico pedimos sua colaboração.</p>
-
-							<p>Sua mão estendida, faz o outro entender que há esperança para dor .   </p>
-							<img width="100%" alt="Ritual Pajelança" title="Ritual Pajelança" src="img/rituais/sua-mao-estendida.jpg">
-							<p>Estamos direcionando todo o valor do Ritual de 10/10 segunda-feira para Instituição CCA Fraternidade, portanto se você não puder comparecer e desejar nos ajudar entre em contato até 10/10 via whats-up com Márcia (011)98338-2840, estaremos direcionando local de entrega e depósito.</p>
-							<p>A Instituição Núcleo Asssistencial Fraternidade esta situada na Rua General Jerônimo Furtado, 286 – Jaçanã – São Paulo – Cep : 02237-000 Fone : 2241-7841 e cuida de 150 crianças carentes, além de muitas famílias que vivem ao redor numa situação de extrema pobreza, como exemplo : vivendo com esgoto aberto, sem alimentos e roupas, lidando com frio e quem sabe até mesmo sem esperança.</p>
-							<p>Esperamos neste momento tocar o seu coração e pedimos a você que nos ajude com livros de literatura, cestas básicas para as famílias, cobertores, roupas para as crianças, sapatos e panelas grandes para cozinha da instituição.</p>
-							<p>Segue endereço da Instituição</p>
-							<p>Com toda nossa gratidão.</p>
-							<p>Terreno</p>
-							<p>Rua Dom Pedro de Alcântara, 430 </p>
-							<p>Mairiporã - São Paulo - Antiga Rua 01</p>
-							<p>www.clcecvv.com.br </p>
-							<p></p>
+							<p>Na Serra a temperatura cai bastante, pedimos que tragam seu agasalho, colchonete e cobertor</p>
+							<p>No final do Ritual é de costume fazermos uma Confraternização, sintam em seu coração e tragam frutas, suco ou alimento de seu agrado.</p>
+							<p>Nossa casa precisa de velas, incensos e papel higiênico e pedimos sua colaboração.</p>
+							<p>Céu Luz e Caridade e Céu Viva Vida !</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
 
 	<!-- Leitura Section -->
 	<section id="leitura">
@@ -360,9 +231,9 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>12 de Setembro - Segunda-feira</h4>
-									<h4 class="subheading">Vivência Xamânica</h4>
+									<h4>22 de Outubro - Sábado</h4>
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
+									<h4 class="subheading">Celebração à Umbanda</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted hide">
