--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<p class="large text-muted">O amor decompõe-se em muitas cores, em muitas virtudes.</p>
 							<p class="large text-muted">É este sol das almas que buscamos, cada um de uma forma, cada um a seu tempo. Sempre amparados pelo astro de primeira grandeza que é Jesus, que veio à Terra e permaneceu nestes ares para nos guiar aos caminhos que nos conduzirão ao Criador.</p>
 						</div>
-					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
+					<button type="button" id="lermaisSoldasAlmas" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
 				</div>
 			</div>
 		</div>
@@ -211,7 +211,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<p class="large text-muted">Doces mistérios do amor que se perpetua no tempo...</p>
 						<p class="large text-muted">Excelente Semana !!</p>
 					</div>
-					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura2">Ler Mais</button>
+					<button type="button" id="lermaisQuandoComecaoAmor" class="btn btn-info" data-toggle="collapse" data-target="#divleitura2">Ler Mais</button>
 				</div>
 			</div>
 		</div>
