--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>Todas as Terças</h4>
+									<h4>Todas as Quartas-Feiras</h4>
 									<h4 class="subheading">Estudo do Evangelho</h4>
 								</div>
 								<div class="timeline-body">
@@ -1050,7 +1050,7 @@
 		  space: 'lwue28clesj3',
 		  // This is the access token for this space. Normally you get both ID and the token in the Contentful web app
 		  accessToken: 'a1d1b70d644f32ab9d134debd0b8a22818a725d8c5f2a81a87260225fc2583ee'
-		})
+		});
 		var app = angular.module('clcecvvApp', []);
 	    app.controller('clcecvvCtrl', ['$scope', '$sce', function($scope, $sce) {
 
