--- a/index.html
+++ b/index.html
@@ -551,26 +551,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#maisInfo" style="display:none">Ler Normas</button>
 				
 				<div id="maisInfo" class="collapse in">
-					<p class="large text-muted">Aqui Neste INSTITUTO Espiritual é expressamente PROIBIDO portar qualquer droga, cigarro ou álcool.</p>
-					<p class="large text-muted">Nunca esquecer que é um trabalho espiritual, O SILÊNCIO É FUNDAMENTAL, traga Seriedade, Respeito e Disciplina!</p>
-					<p class="large text-muted">Todos são obrigados a apresentar documento com foto (RG, carteira trabalho ou de motorista)</p>
+					<p class="large text-muted">Aqui neste Instituto Espiritual é expressamente PROIBIDO  portar  qualquer tipo de droga, cigarro ou álcool.</p>
+					<p class="large text-muted">Nunca esquecer que é um Trabalho Espiritual , O SILÊNCIO É FUNDAMENTAL, traga Seriedade, respeito e Disciplina !</p>
+					<p class="large text-muted">Todos são obrigados a apresentar documento com foto ( RG, Carteira de Trabalho ou CNH ).</p>
 					<p class="large text-muted">
-						Menores devem estar acompanhados por um dos responsáveis legais ou com autorização por escrito com firma reconhecida em Cartório.<br /> <a class="a-blue"
+						Menores devem estar acompanhados por um dos responsáveis legais ou com autorização por escrito com firma reconhecida em cartório.<br /> <a class="a-blue"
 							href="docs/AutorizacaoMenor.doc">(clique aqui para imprimir o modelo)</a>
 					</p>
-					<p class="large text-muted">Trazer colchonete e cobertor pois na serra faz muito frio.</p>
-					<p class="large text-muted">Mulheres vestidas discretamente com blusa sem decote e saia longa (por baixo sempre calça legging).</p>
-					<p class="large text-muted">Homens vestidos com calça comprida e camiseta de manga (não é permitido bermudas nem regatas). Roupas de cores claras</p>
+					<p class="large text-muted">Trazer colchonete e cobertos pois na serra faz frio .</p>
+
+					<h4 class="text-title">VESTIMENTAS</Br>
+					As roupas usadas merecem atenção</h4>
+
+					<p class="large text-muted">Mulheres vestidas discretamente com blusa sem decote, cobrindo a barriga e ombros, sem transparência leves e claras.</p>
+					<p class="large text-muted">Pedimos não utilizar roupas escuras.</p>
+					<p class="large text-muted">Homens vestidos com calça comprida e camiseta de manga (não é permitido bermudas nem regatas, leve e claras )</p>
+					<p class="large text-muted">Não utilizar roupas escuras.</p>
 
 					<br />
 					<h4 class="text-title">Restrições à participação nos trabalhos com a Ayahuasca:</h4>
 
 					<p class="large text-muted">- Pessoas que tomam remédio tarja preta, caso não haja restrição médica, entrar em contato para mais informações.</p>
-					<p class="large text-muted">- Não é permitido às pessoas com problemas cardíacos, inclusive as que utilizem marca-passo.</p>
-					<p class="large text-muted">- Não é permitido às pessoas com problemas psiquiátricos.</p>
-					<p class="large text-muted">- Dentro do Instituto é proibido usar cigarro.</p>
-					<p class="large text-muted">- Sugerimos que se abstenham de álcool 03 dias antes do trabalho para um melhor aproveitamento do mesmo.</p>
-					<p class="large text-muted">Serão aceitas doações de: rolos de papel higiênico, velas de sete dias, incensos Nag Champa.</p>
+					<p class="large text-muted">- Não é permitido pessoas com problemas cardíacos, inclusive as que utilizem marca-passo.</p>
+					<p class="large text-muted">- Não é permitido pessoas com problemas psiquiátricos.</p>
+					<p class="large text-muted">- Dentro do Instituto é proibida a utilização de cigarro.</p>
+					<p class="large text-danger">- Para o melhor aproveitamento do Trabalho Espiritual, sugerimos que se abstenham de álcool e jejum sexual, carnes vermelhas, priorizando uma alimentação mais leve 03 dias antes.</p>
+					<p class="large text-danger">- Para maior aproveitamento dos benefícios do Ritual nos 03 dias seguintes a mesma dieta.</p>
+					<p class="large text-muted">Serão aceitas doações de rolos de papel higiênico,velas palito e de 7 dias e incensos Nag Champa.</p>
 				</div>
 			</div>
 		</div>
