--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<script src="js/jquery.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.min.js"></script>
-	<script src="https://npmcdn.com/contentful@latest/browser-dist/contentful.min.js"></script>
+    <script src="https://unpkg.com/contentful@3.8.1/browser-dist/contentful.min.js"></script>
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
